# aoc2020

./: Cargo.toml  README.md
data/: day3.txt
day1-2/: Cargo.toml
day11/: Cargo.toml
day11/src/: layout.rs
day2-1/: Cargo.toml
day2-2/: Cargo.toml
day3-1/src/: lib.rs
day4-1/src/: lib.rs
day4-2/: Cargo.toml
day5-1/: Cargo.toml
day5-1/src/: lib.rs
day7/src/: lib.rs
day8/: Cargo.toml
src/: day1-2.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day2-1.rs  day2-2.rs  day2.rs  day3.rs  day4-2.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  layout.rs  lib.rs  main.rs
src/day11/: layout.rs  seat.rs  solver.rs
src/day12/: instruction.rs  waypoint.rs
